syntax = "proto3";

package auth;

service UsersService {
    rpc CreateUser (CreateUserDto) returns (User) {};
    rpc FindAllUsers(Empty) returns (Users) {};
}

message Empty {};

message Users {
    repeated User users = 1;
}

message CreateUserDto {
    string name = 1;
}

message User {
    string id = 1;
    string name = 2;
 }